syntax = "proto3";

option go_package="../network/gRPC/admin_commands_message";

package admin_commands_message;

service BlockchainAdministratorService {
   rpc CheckLiveness (HealthCheckRequest) 
   returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
    repeated int32 open_port = 2;
}
