syntax = "proto3";

option go_package="../network/gRPC/admin_commands_message";

package admin_L4_commands;

service L4Commands {
  rpc CheckHealth (L4HealthCheckRequest)
      returns (L4HealthCheckResponse);
}

message L4HealthCheckRequest {
  string ping = 1;
}

message L4HealthCheckResponse {
  bool connected = 1;
  string status = 2;
  string pong = 3;
  string ip = 4;
  repeated uint32 ports = 5;
}